# percolator-CLI-excefy

./: AUDIT.md  BPF_FEATURES_PROGRESS.md  CONTRIBUTING.md  Cargo.toml  FINAL_VULNERABILITY_STATUS.md  KITCHEN_SINK_TEST.md  ORDERBOOK_SCENARIOS_STATUS.md  README.md  ROADMAP.md  VULNERABILITY_REPORT.md  VULNERABILITY_REPORT_UPDATED.md  VULNERABILITY_STATUS_UPDATE.md  audit.md  kani_audit_full.tsv  plan.md  run_all_orderbook_tests.sh  run_all_tests.sh  spec.md  test_halt_resume.sh  test_insurance_crisis.sh  test_lp_scenarios.sh  test_matching_engine.sh  test_matching_scenarios.sh  test_modify_order.sh  test_router_lp_slab.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md
cli/src/: client.rs  config.rs  crisis.rs  deploy.rs  exchange.rs  insurance.rs  keeper.rs  liquidation.rs  liquidity.rs  main.rs  margin.rs  matcher.rs  tests.rs  trading.rs
crates/adapter_core/: Cargo.toml
crates/adapter_core/src/: kani_proofs.rs  lib.rs
crates/adapter_core/tests/: kani_proofs.rs
crates/amm_model/: Cargo.toml
crates/amm_model/src/: lib.rs  math.rs
crates/model_safety/src/: adaptive_warmup.rs  deposit_withdraw.rs  lib.rs  lp_bucket.rs  lp_operations.rs  negative_tests.rs  orderbook.rs
crates/model_safety/src/crisis/: materialize.rs  proofs.rs
crates/proofs/kani/: Cargo.toml
crates/proofs/kani/src/: adaptive_warmup.rs  amm.rs  lib.rs  liq_planner.rs  pnl_vesting.rs  portfolio.rs  venue_isolation.rs
docs/: LP_SCENARIOS.md  ROUTER_LP_SUMMARY.md  SLAB_IMPLEMENTATION_CHECKLIST.md  TEST_SCRIPTS_EXECUTION_STATUS.md  VERIFICATION.md  oracle.md  risk.md  slab_4096_rewrite.md  spec.md
keeper/src/: health.rs
programs/amm/: Cargo.toml
programs/amm/src/: adapter.rs  instructions.rs  lib.rs  math.rs
programs/common/src/: error.rs  header.rs  math.rs
programs/oracle/src/: state.rs
programs/router/: Cargo.toml
programs/router/src/: authority_proofs.rs  entrypoint.rs
programs/router/src/instructions/: deposit.rs  execute_cross_slab.rs  execute_cross_slab_test.rs  initialize.rs  initialize_portfolio.rs  initialize_test.rs  liquidate_user.rs  mod.rs  register_slab_test.rs  router_liquidity.rs  withdraw.rs
programs/router/src/state/: model_bridge.rs  pnl_vesting.rs  portfolio.rs  registry.rs
programs/slab/: Cargo.toml
programs/slab/src/: entrypoint.rs
programs/slab/src/instructions/: cancel_order.rs  commit_fill.rs  halt_trading.rs  initialize.rs  mod.rs  place_order.rs  resume_trading.rs
programs/slab/src/state/: mod.rs  model_bridge.rs  slab.rs
src/: percolator.rs  prediction.rs
tests/: amm_tests.rs  fuzzing.rs  kani.rs  negative_pnl_and_margin.rs  unit_tests.rs
tests/e2e/: Cargo.toml
web/: README.md  app.js  index.html  styles.css
web/data/: sample-markets.json
