[package]
name = "percolator-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "percolator"
path = "src/main.rs"

[dependencies]
# Solana SDK
solana-client = "2.1"
solana-sdk.workspace = true
solana-program.workspace = true
solana-account-decoder = "2.1"
solana-cli-config = "2.1"

# CLI framework
clap = { version = "4.4", features = ["derive", "cargo"] }

# Async runtime
tokio.workspace = true
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
colored = "2.1"

# Utilities
bs58 = "0.5"
shellexpand = "3.1"
indicatif = "0.17"
chrono = "0.4"

# Configuration
toml = "0.8"

# Internal dependencies
percolator-common = { path = "../programs/common" }
model_safety = { path = "../crates/model_safety" }
percolator-router = { path = "../programs/router", features = [] }

[dev-dependencies]
tempfile = "3.8"
