[package]
name = "percolator-amm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "percolator_amm"

[dependencies]
pinocchio.workspace = true
pinocchio-log.workspace = true
percolator-common = { path = "../common" }
amm_model = { path = "../../crates/amm_model" }
adapter-core = { path = "../../crates/adapter_core" }

[dev-dependencies]
solana-program-test.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
proptest.workspace = true

[profile.release]
overflow-checks = true
