[package]
name = "percolator-router"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
percolator-common = { path = "../common" }
percolator-oracle = { path = "../oracle" }
model_safety = { path = "../../crates/model_safety", default-features = false }
adapter-core = { path = "../../crates/adapter_core", default-features = false }
arrayvec = { version = "0.7", default-features = false }

[features]
default = []
bpf-entrypoint = []
