[package]
name = "percolator-slab"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
percolator-common = { path = "../common" }
adapter-core = { path = "../../crates/adapter_core" }
model_safety = { path = "../../crates/model_safety" }

[features]
default = []
bpf-entrypoint = []
